--- a/scripts/igneous/configs/base.yaml
+++ b/scripts/igneous/configs/base.yaml
@@ -5,11 +5,11 @@ n_jobs_skeletonize: 32
 n_jobs_mesh: 32
 n_jobs_touching_centroids: 32
 
-skeletonize:
+skeletonize_trunk:
   mip: 0
   shape: ${chunk_size}
   sharded: False
-  dust_threshold: 200
+  dust_threshold: 0
   progress: True
   parallel: 1
   fill_missing: False
@@ -23,10 +23,28 @@ skeletonize:
     pdrf_scale: 100000
     pdrf_exponent: 4
 
+skeletonize_spines:
+  mip: 0
+  shape: ${chunk_size}
+  sharded: False
+  dust_threshold: 0
+  progress: True
+  parallel: 1
+  fill_missing: False
+  teasar_params:
+    scale: 1.5
+    const: 300
+    soma_detection_threshold: 1500
+    soma_acceptance_threshold: 3500
+    soma_invalidation_scale: 2
+    soma_invalidation_const: 300
+    pdrf_scale: 100000
+    pdrf_exponent: 4
+
 skeletonize_merge:
   crop: 0
   magnitude: 3
-  dust_threshold: 200
+  dust_threshold: 0
   tick_threshold: 3500
   delete_fragments: False
 
