--- a/scripts/igneous/configs/seg_den.yaml
+++ b/scripts/igneous/configs/seg_den.yaml
@@ -11,3 +11,10 @@ data:
   output_layer: ${output_dir}/${name}/output_layer
   mapping : ${output_dir}/${name}/mapping.npy
   touching: ${output_dir}/${name}/touching.npz
+  seed: ${output_dir}/${name}/seed.npz
+  seed_zarr: ${output_dir}/${name}/seed.zarr
+  seed_zarr_sync: ${output_dir}/${name}/seed.sync
+  feature_zarr: ${output_dir}/${name}/feature.zarr
+  feature_zarr_sync: ${output_dir}/${name}/feature.sync
+  pc_zarr: ${output_dir}/${name}/pc.zarr
+  pc_zarr_sync: ${output_dir}/${name}/pc_sync.zarr
