use KDtrees instead of feature transforms to avoid floating segments, working cropping now

--- a/scripts/igneous/justfile
+++ b/scripts/igneous/justfile
@@ -70,14 +70,14 @@ visualize_seg_den:
     python visualize.py -c configs/base.yaml -c configs/seg_den.yaml
 
 # NOT USED since kimimaro dropping spines fixed
-touching_human:
-    python get_touching_centroids.py -c configs/base.yaml -c configs/human.yaml
+#touching_human:
+#    python get_touching_centroids.py -c configs/base.yaml -c configs/human.yaml
 
-touching_mouse:
-    python get_touching_centroids.py -c configs/base.yaml -c configs/mouse.yaml
+#touching_mouse:
+#    python get_touching_centroids.py -c configs/base.yaml -c configs/mouse.yaml
 
-touching_seg_den:
-    python get_touching_centroids.py -c configs/base.yaml -c configs/seg_den.yaml
+#touching_seg_den:
+#    python get_touching_centroids.py -c configs/base.yaml -c configs/seg_den.yaml
 
 seed_human:
     python feature_transform.py -c configs/base.yaml -c configs/human.yaml
