implemented folds for fresegdataset

--- a/scripts/igneous/configs/seg_den.yaml
+++ b/scripts/igneous/configs/seg_den.yaml
@@ -91,3 +91,15 @@ data:
   feature_zarr_sync: ${output_dir}/${name}/feature.sync
   pc_zarr: ${output_dir}/${name}/pc.zarr
   pc_zarr_sync: ${output_dir}/${name}/pc_sync.zarr
+
+# import numpy as np
+# np.random.seed(0)
+# numbers = np.random.permutation(range(1, 51))
+# split_lists = [sorted(x) for x in np.array_split(numbers, 5)]
+dataloader:
+  folds:
+    - [3, 5, 11, 12, 23, 28, 29, 32, 39, 42]
+    - [8, 15, 19, 27, 30, 34, 35, 36, 46, 49]
+    - [9, 14, 16, 17, 21, 26, 31, 33, 43, 44]
+    - [2, 6, 7, 13, 18, 24, 25, 38, 41, 50]
+    - [1, 4, 10, 20, 22, 37, 40, 45, 47, 48]
