--- a/scripts/igneous/configs/human.yaml
+++ b/scripts/igneous/configs/human.yaml
@@ -18,3 +18,4 @@ data:
   feature_zarr_sync: ${output_dir}/${name}/feature.sync
   pc_zarr: ${output_dir}/${name}/pc.zarr
   pc_zarr_sync: ${output_dir}/${name}/pc_sync.zarr
+  pc_lengths: ${output_dir}/${name}/pc_lengths.npz
