fixed broken folds in FreSegDataset, implemented folds for CachedDataset

--- a/scripts/igneous/justfile
+++ b/scripts/igneous/justfile
@@ -119,5 +119,7 @@ dataloader_seg_den:
     python dataloader.py -c configs/base.yaml -c configs/seg_den.yaml
 
 cache_dataset:
-    python cache_dataloader.py --fold 0 --pathlength 10000 --npoints 4096 --output_dir /data/adhinart/dendrite/scripts/igneous/outputs/seg_den
+    python cache_dataloader.py --fold -1 --pathlength 10000 --npoints 30000 --output_dir /data/adhinart/dendrite/scripts/igneous/outputs/seg_den
 
+visualize_cached:
+    python visualize_cached.py
