--- a/scripts/igneous/configs/base.yaml
+++ b/scripts/igneous/configs/base.yaml
@@ -8,6 +8,8 @@ n_jobs_mesh: 32
 n_jobs_touching_centroids: 32
 n_jobs_feature_transform: 8
 n_jobs_pc: 32
+n_jobs_cache: 64
+n_threads_cache: 4
 
 downsample:
   chunk_size: [64, 64, 64] # otherwise fails to downsample some mips
