--- a/scripts/igneous/configs/seg_den.yaml
+++ b/scripts/igneous/configs/seg_den.yaml
@@ -104,3 +104,10 @@ dataloader:
     - [9, 14, 16, 17, 21, 26, 31, 33, 43, 44]
     - [2, 6, 7, 13, 18, 24, 25, 38, 41, 50]
     - [1, 4, 10, 20, 22, 37, 40, 45, 47, 48]
+  cached:
+    - num_points: 1000000
+      path_length: 10000
+      output_dir: ${output_dir}/${name}/dataset_${dataloader.cached[0].num_points}_${dataloader.cached[0].path_length}
+    - num_points: 1000000
+      path_length: 20000
+      output_dir: ${output_dir}/${name}/dataset_${dataloader.cached[1].num_points}_${dataloader.cached[1].path_length}
