--- a/scripts/igneous/configs/human.yaml
+++ b/scripts/igneous/configs/human.yaml
@@ -2,12 +2,25 @@ name: human
 anisotropy: [30, 8, 8]
 _base_dir: "/mmfs1/data/adhinart/dendrite"
 data:
-  raw: ${_base_dir}/raw/${name}_raw.h5
+  broken_debug: ${output_dir}/${name}/broken_debug.npz
+  broken_10_png_dir: ${_base_dir}/raw/denspine_seg10
+  broken_10_png_vol: ${_base_dir}/raw/denspine_seg10_vol.h5
+  broken_10_png_vol_key: "main"
+
+  broken_raw: ${_base_dir}/raw/${name}_raw.h5
+  broken_raw_key: "main"
+  broken_spine: ${_base_dir}/raw/${name}_spine.h5
+  broken_spine_key: "main"
+  broken_seg: ${_base_dir}/raw/${name}_seg.h5
+  broken_seg_key: "main"
+
+  raw: ${_base_dir}/raw/${name}_raw_fixed.h5
   raw_key: "main"
-  spine: ${_base_dir}/raw/${name}_spine.h5
+  spine: ${_base_dir}/raw/${name}_spine_fixed.h5
   spine_key: "main"
-  seg: ${_base_dir}/raw/${name}_seg.h5
+  seg: ${_base_dir}/raw/${name}_seg_fixed.h5
   seg_key: "main"
+
   output_layer: ${output_dir}/${name}/output_layer
   mapping: ${output_dir}/${name}/mapping.npy
   touching: ${output_dir}/${name}/touching.npz
