--- a/scripts/igneous/configs/seg_den.yaml
+++ b/scripts/igneous/configs/seg_den.yaml
@@ -72,8 +72,13 @@ data:
   broken_spine_key: "main"
   broken_seg: ${_base_dir}/raw/${name}_seg.h5
   broken_seg_key: "main"
-  broken_16_new_branches: ${_base_dir}/raw/seg_d5_6nm.h5
-  broken_16_new_branches_key: "main"
+  broken_new_branches:
+    - trunk_id: 16
+      file: ${_base_dir}/raw/seg_d5_6nm.h5
+      key: "main"
+    - trunk_id: 31
+      file: ${_base_dir}/raw/seg_d31_6nm.h5
+      key: "main"
 
   raw: ${_base_dir}/raw/${name}_raw_fixed.h5
   raw_key: "main"
